--- a/fanqu/build.gradle
+++ b/fanqu/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     compile project(':fanqulogin_share_utill')
     compile project(':qbggnetworkrequest')
     //图片加载
+    //ViewPagerIndicator指示器
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.trello:rxlifecycle:0.4.0'
@@ -90,5 +91,6 @@ dependencies {
     compile 'com.zhy:base-rvadapter:3.0.3'
     compile 'com.zhy:flowlayout-lib:1.0.3'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.shizhefei:ViewPagerIndicator:1.1.4'
     testCompile 'junit:junit:4.12'
 }
