第一次提交

--- a/fanqu/src/main/AndroidManifest.xml
+++ b/fanqu/src/main/AndroidManifest.xml
@@ -122,7 +122,7 @@
             android:label="登录注册一起来"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".main.acitvities.MainActivity"
             android:label="主页"
@@ -220,7 +220,7 @@
             android:label="我的钱包"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".personcentre.activities.MineBalanceActivity"
             android:label="我的余额"
@@ -268,7 +268,7 @@
             android:label="我的积分"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".personcentre.activities.MineCouponActivity"
             android:label="优惠卷"
@@ -282,6 +282,12 @@
                 <category android:name="android.intent.category.MULTIWINDOW_LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".personcentre.activities.GetCouponCentreActivity"
+            android:label="领券中心"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
     </application>
 
 </manifest>
