--- a/fanqu/build.gradle
+++ b/fanqu/build.gradle
@@ -92,5 +92,6 @@ dependencies {
     compile 'com.zhy:flowlayout-lib:1.0.3'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.shizhefei:ViewPagerIndicator:1.1.4'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
     testCompile 'junit:junit:4.12'
 }
