--- a/fanqu/build.gradle
+++ b/fanqu/build.gradle
@@ -93,5 +93,9 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.shizhefei:ViewPagerIndicator:1.1.4'
     compile 'com.android.support:recyclerview-v7:25.1.0'
+    //虚线view
+    compile 'com.fang:dashview:v1.0.0'
+    //圆形进度条
+   // compile 'com.dinuscxj:circleprogressbar:1.1.1'
     testCompile 'junit:junit:4.12'
 }
