第一次提交

--- a/fanqu/build.gradle
+++ b/fanqu/build.gradle
@@ -15,7 +15,7 @@ android {
         }
     }
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    buildToolsVersion "25.0.2"
     useLibrary 'org.apache.http.legacy'
     aaptOptions.cruncherEnabled = false
     aaptOptions.useNewCruncher = false
@@ -97,5 +97,7 @@ dependencies {
     compile 'com.fang:dashview:v1.0.0'
     //圆形进度条
    // compile 'com.dinuscxj:circleprogressbar:1.1.1'
+    // 设置状态栏的工具类
+    compile 'com.jaeger.statusbaruitl:library:1.3.5'
     testCompile 'junit:junit:4.12'
 }
