--- a/fanqu/build.gradle
+++ b/fanqu/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    //    compile 'cn.hugeterry.updatefun:updatefun:1.8.8'
+        compile 'cn.hugeterry.updatefun:updatefun:1.8.8'
     //    compile 'com.github.chrisbanes.photoview:library:1.2.4'
     //    compile 'me.iwf.photopicker:PhotoPicker:0.8.11@aar'
     //    compile 'com.nineoldandroids:library:2.4.0'
@@ -100,4 +100,6 @@ dependencies {
     // 设置状态栏的工具类
     compile 'com.jaeger.statusbaruitl:library:1.3.5'
     testCompile 'junit:junit:4.12'
+
+   // compile 'cn.hugeterry.updatefun:updatefun:1.8.8'
 }
